@@ -697,6 +697,14 @@ Release 2.7.0 - UNRELEASED
     HDFS-7814. Fix usage string of storageType parameter for
     "dfsadmin -setSpaceQuota/clrSpaceQuota". (Xiaoyu Yao via cnauroth)
 
+    HDFS-7813. TestDFSHAAdminMiniCluster#testFencer testcase is failing
+    frequently. (Rakesh R via cnauroth)
+
+    HDFS-7009. Active NN and standby NN have different live nodes.
+    (Ming Ma via cnauroth)
+
+    HDFS-7807. libhdfs htable.c: fix htable resizing, add unit test (cmccabe)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
